--- a/assets/stylesheets/ui/ui.css
+++ b/assets/stylesheets/ui/ui.css
@@ -7,21 +7,24 @@
   border-radius: 8px;
   background: rgba(246, 246, 246, 0.6);
   -webkit-backdrop-filter: blur(30px);
-          backdrop-filter: blur(30px);
+  backdrop-filter: blur(30px);
   display: inline-flex;
   flex-direction: column;
   justify-content: center;
   -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  user-select: none;
   position: absolute;
   opacity: 0;
   pointer-events: none;
+  z-index: 10000;
 }
+
 .menu.visible {
   opacity: 1;
   pointer-events: initial;
 }
+
 .menu p {
   font-size: 13px;
   color: rgba(0, 0, 0, 0.85);
@@ -31,19 +34,25 @@
   border-radius: 5px;
   padding: 3px 10px;
 }
-.menu p:hover {
+
+.menu p:hover,
+.menu p.clicked {
   background: #0A82FF;
   color: white;
 }
+
 .menu p:first-child {
   margin-top: 0;
 }
+
 .menu p:last-child {
   margin-bottom: 0;
 }
+
 .menu p[disabled] {
   color: rgba(0, 0, 0, 0.25);
 }
+
 .menu hr {
   background: rgba(0, 0, 0, 0.1);
   border-radius: 0.5px;
@@ -52,4 +61,6 @@
   height: 1px;
   margin: 4px 0;
   align-self: center;
-}/*# sourceMappingURL=ui.css.map */
+}
+
+/*# sourceMappingURL=ui.css.map */
